# Focaccia

./: .gitignore  README.md  main.py  requirement.txt  setup.cfg
focaccia/: focaccia.py  main.py
focaccia/filters/: blur.py  ellipse.py  hsv.py  radicalize.py
