[metadata]
name = focaccia
version = 0.0.1
author = Mutsuha Asada

[options]
packages = find:
install_requires =
    optuna == 2.10.0
    matplotlib == 3.5.1
    scikit-image == 0.19.2
    numpy == 1.22.1
    opencv-contrib-python == 4.5.5.64

[options.extras_require]
dev =
    pytest
    pysen==0.10.1
    black==21.10b0
    flake8==4.0.1
    isort==5.10.1
    mypy==0.910
