[metadata]
name = focaccia
version = 0.0.1
author = Mutsuha Asada

[options]
packages = find:
install_requires =
    optuna == 2.10.0
    matplotlib
    scikit-image
    numpy
    opencv-contrib-python == 4.5.5.64

[options.extras_require]
dev =
    pytest
    pysen
    black
    flake8
    isort
    mypy
